# nlp_parser

./: Makefile  README.md  pyproject.toml  requirements.txt
csv_parser/: alt.py  main.py  training.py
