[tool.poetry]
name = "csv-parser"
version = "0.1.0"
description = ""
authors = ["Alexey Yutanov"]
packages = [
  { include = "csv_parser" },
]

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csv-parser-run = "csv_parser.main:main"
csv-parser-training = "csv_parser.training:main"
csv-parser-alt = "csv_parser.alt:main"
